<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/back"
        style="@style/MyListBackContent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:tag="back" >

        <Button
            android:id="@+id/btnShare"
            style="@style/MyListButtonAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_share" />

        <Button
            android:id="@+id/btnEdit"
            style="@style/MyListButtonAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/MyListButtonAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/front"
        style="@style/MyListFrontContent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:tag="front" >

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</FrameLayout>